--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,14 @@
   margin: auto;
   margin-bottom: 40px;
 }
+.destination {
+  margin: 0 20px;
+}
 
 .destination img {
 height: 200px;
+width: 100%;
+box-shadow: 2px 4px 8px rgb(68, 67 ,67);
+border-radius: 10px;
+object-fit: cover;
 }
