--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,6 +48,14 @@
     background-color: rgb(255, 238, 0);
 }
 
+#highlights h2 {
+text-transform:uppercase;
+text-align: center;
+font-size: 40px;
+color: rgb(59, 65, 64);
+margin: 24px 0;
+}
+
 #destinations {
   display: flex;
   width: 90%;
@@ -56,6 +64,7 @@
 }
 .destination {
   margin: 0 20px;
+  text-transform: uppercase;
 }
 
 .destination img {
@@ -64,4 +73,15 @@ width: 100%;
 box-shadow: 2px 4px 8px rgb(68, 67 ,67);
 border-radius: 10px;
 object-fit: cover;
+}
+
+.destination p {
+  text-align: center;
+  font-sizw: 24px;
+  color: rgb(124, 123, 123)
+  margin: 20px 0;
+}
+
+.destination strong {
+  color: rgb(0, 160, 117);
 }
