--- a/styles/places.css
+++ b/styles/places.css
@@ -1,4 +1,5 @@
 body {
+  color: rgb(68, 68, 68);
   background: linear-gradient(40deg, rgb(77, 77, 77), rgb(58, 58, 58));
 }
 
@@ -26,21 +27,23 @@ main li img {
 }
 
 .actions {
-  margin: 80px 10px 0 320px;
+  text-align: right;
 }
 
 .actions a {
   text-decoration: none;
-  color: rgb(0, 122, 204);
-  padding: 10px 10px;
-  border-radius: 4px;
+  color: rgb(22, 211, 228);
+  padding: 6px;
+  border-radius: 5px;
 }
 
 .actions a:hover {
-  text-decoration: none;
-  background-color: rgb(142, 212, 249);
+  background-color: rgb(235, 253, 255);
 }
 
 .item-content {
   padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
