--- a/styles/places.css
+++ b/styles/places.css
@@ -9,7 +9,10 @@ header {
 
 main ul {
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 48px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px 20px;
 }
 
 main li {
@@ -18,13 +21,16 @@ main li {
   box-shadow: 1px 1px 4px rgb(0, 0, 0 0.2);
   border-radius: 6px;
   overflow: hidden;
-  width: 500px;
 }
 
 main li img {
   width: 300px;
   height: 280px;
   object-fit: cover;
+}
+
+li:nth-of-type(3) {
+  grid-column: 1 / span 2;
 }
 
 .actions {
