--- a/styles/places.css
+++ b/styles/places.css
@@ -3,8 +3,21 @@ body {
   background: linear-gradient(40deg, rgb(77, 77, 77), rgb(58, 58, 58));
 }
 
+#page-logo a {
+  color: rgb(183, 230, 235);
+}
+
 header {
   position: static;
+}
+
+header a {
+  color: rgb(183, 230, 235);
+}
+
+header nav a:hover {
+  color: rgb(59, 59, 59);
+  background-color: rgb(183, 230, 235);
 }
 
 main ul {
@@ -53,4 +66,8 @@ li:nth-of-type(3) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.item-content h2 {
+  margin: 0;
 }
